Src/VKScript/VKScript/VkScript/Antlr/VKScriptParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.5.3
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from VKScript.g4 by ANTLR 4.5.3

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.5.3")]
[System.CLSCompliant(false)]
public partial class VKScriptParser : Parser {
	public const int
		INT=1, STRING=2, BOOL=3, COLON=4, DOT=5, COMMA=6, ASSIGN=7, EQ=8, NOTEQ=9, 
		AND=10, OR=11, PLUS=12, MINUS=13, MUL=14, DIV=15, MOD=16, LESS_THAN=17, 
		LESS_EQ_THAN=18, GREATER_THAN=19, GREATER_EQ_THAN=20, LBRACKET=21, RBRACKET=22, 
		LCBRACKET=23, RCBRACKET=24, IF=25, ELSE=26, WHILE=27, COMMENT=28, NEWLINE=29, 
		WS=30, ID=31;
	public const int
		RULE_vk_script = 0, RULE_literal = 1, RULE_list = 2, RULE_list_content = 3, 
		RULE_pair = 4, RULE_expr = 5, RULE_primitive = 6, RULE_assign = 7, RULE_if_else_statement = 8, 
		RULE_while_statement = 9, RULE_statement = 10, RULE_output = 11;
	public static readonly string[] ruleNames = {
		"vk_script", "literal", "list", "list_content", "pair", "expr", "primitive", 
		"assign", "if_else_statement", "while_statement", "statement", "output"
	};

	private static readonly string[] _LiteralNames = {
		null, null, null, null, "':'", "'.'", "','", "'='", "'=='", "'!='", "'&&'", 
		"'||'", "'+'", "'-'", "'*'", "'/'", "'%'", "'<'", "'<='", "'>'", "'>='", 
		"'('", "')'", "'{'", "'}'", "'if'", "'else'", "'while'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "INT", "STRING", "BOOL", "COLON", "DOT", "COMMA", "ASSIGN", "EQ", 
		"NOTEQ", "AND", "OR", "PLUS", "MINUS", "MUL", "DIV", "MOD", "LESS_THAN", 
		"LESS_EQ_THAN", "GREATER_THAN", "GREATER_EQ_THAN", "LBRACKET", "RBRACKET", 
		"LCBRACKET", "RCBRACKET", "IF", "ELSE", "WHILE", "COMMENT", "NEWLINE", 
		"WS", "ID"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "VKScript.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return _serializedATN; } }

	public VKScriptParser(ITokenStream input)
		: base(input)
	{
		Interpreter = new ParserATNSimulator(this,_ATN);
	}
	public partial class Vk_scriptContext : ParserRuleContext {
		public StatementContext[] statement() {
			return GetRuleContexts<StatementContext>();
		}
		public StatementContext statement(int i) {
			return GetRuleContext<StatementContext>(i);
		}
		public ITerminalNode[] NEWLINE() { return GetTokens(VKScriptParser.NEWLINE); }
		public ITerminalNode NEWLINE(int i) {
			return GetToken(VKScriptParser.NEWLINE, i);
		}
		public Vk_scriptContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_vk_script; } }
		public override void EnterRule(IParseTreeListener listener) {
			IVKScriptListener typedListener = listener as IVKScriptListener;
			if (typedListener != null) typedListener.EnterVk_script(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IVKScriptListener typedListener = listener as IVKScriptListener;
			if (typedListener != null) typedListener.ExitVk_script(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IVKScriptVisitor<TResult> typedVisitor = visitor as IVKScriptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitVk_script(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Vk_scriptContext vk_script() {
		Vk_scriptContext _localctx = new Vk_scriptContext(Context, State);
		EnterRule(_localctx, 0, RULE_vk_script);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 28;
			ErrorHandler.Sync(this);
			_la = TokenStream.La(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INT) | (1L << STRING) | (1L << BOOL) | (1L << MINUS) | (1L << LBRACKET) | (1L << LCBRACKET) | (1L << IF) | (1L << WHILE) | (1L << NEWLINE) | (1L << ID))) != 0)) {
				{
				State = 26;
				switch (TokenStream.La(1)) {
				case INT:
				case STRING:
				case BOOL:
				case MINUS:
				case LBRACKET:
				case LCBRACKET:
				case IF:
				case WHILE:
				case ID:
					{
					State = 24; statement();
					}
					break;
				case NEWLINE:
					{
					State = 25; Match(NEWLINE);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				State = 30;
				ErrorHandler.Sync(this);
				_la = TokenStream.La(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class LiteralContext : ParserRuleContext {
		public PrimitiveContext primitive() {
			return GetRuleContext<PrimitiveContext>(0);
		}
		public ListContext list() {
			return GetRuleContext<ListContext>(0);
		}
		public PairContext pair() {
			return GetRuleContext<PairContext>(0);
		}
		public LiteralContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_literal; } }
		public override void EnterRule(IParseTreeListener listener) {
			IVKScriptListener typedListener = listener as IVKScriptListener;
			if (typedListener != null) typedListener.EnterLiteral(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IVKScriptListener typedListener = listener as IVKScriptListener;
			if (typedListener != null) typedListener.ExitLiteral(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IVKScriptVisitor<TResult> typedVisitor = visitor as IVKScriptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLiteral(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public LiteralContext literal() {
		LiteralContext _localctx = new LiteralContext(Context, State);
		EnterRule(_localctx, 2, RULE_literal);
		try {
			State = 34;
			switch (TokenStream.La(1)) {
			case INT:
			case STRING:
			case BOOL:
			case MINUS:
				EnterOuterAlt(_localctx, 1);
				{
				State = 31; primitive();
				}
				break;
			case LCBRACKET:
				EnterOuterAlt(_localctx, 2);
				{
				State = 32; list();
				}
				break;
			case ID:
				EnterOuterAlt(_localctx, 3);
				{
				State = 33; pair();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ListContext : ParserRuleContext {
		public ITerminalNode LCBRACKET() { return GetToken(VKScriptParser.LCBRACKET, 0); }
		public ITerminalNode RCBRACKET() { return GetToken(VKScriptParser.RCBRACKET, 0); }
		public List_contentContext list_content() {
			return GetRuleContext<List_contentContext>(0);
		}
		public ListContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_list; } }
		public override void EnterRule(IParseTreeListener listener) {
			IVKScriptListener typedListener = listener as IVKScriptListener;
			if (typedListener != null) typedListener.EnterList(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IVKScriptListener typedListener = listener as IVKScriptListener;
			if (typedListener != null) typedListener.ExitList(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IVKScriptVisitor<TResult> typedVisitor = visitor as IVKScriptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitList(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ListContext list() {
		ListContext _localctx = new ListContext(Context, State);
		EnterRule(_localctx, 4, RULE_list);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 36; Match(LCBRACKET);
			State = 38;
			_la = TokenStream.La(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INT) | (1L << STRING) | (1L << BOOL) | (1L << MINUS) | (1L << LBRACKET) | (1L << LCBRACKET) | (1L << ID))) != 0)) {
				{
				State = 37; list_content();
				}
			}

			State = 40; Match(RCBRACKET);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class List_contentContext : ParserRuleContext {
		public ExprContext[] expr() {
			return GetRuleContexts<ExprContext>();
		}
		public ExprContext expr(int i) {
			return GetRuleContext<ExprContext>(i);
		}
		public ITerminalNode[] COMMA() { return GetTokens(VKScriptParser.COMMA); }
		public ITerminalNode COMMA(int i) {
			return GetToken(VKScriptParser.COMMA, i);
		}
		public List_contentContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_list_content; } }
		public override void EnterRule(IParseTreeListener listener) {
			IVKScriptListener typedListener = listener as IVKScriptListener;
			if (typedListener != null) typedListener.EnterList_content(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IVKScriptListener typedListener = listener as IVKScriptListener;
			if (typedListener != null) typedListener.ExitList_content(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IVKScriptVisitor<TResult> typedVisitor = visitor as IVKScriptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitList_content(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public List_contentContext list_content() {
		List_contentContext _localctx = new List_contentContext(Context, State);
		EnterRule(_localctx, 6, RULE_list_content);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 42; expr(0);
			State = 47;
			ErrorHandler.Sync(this);
			_la = TokenStream.La(1);
			while (_la==COMMA) {
				{
				{
				State = 43; Match(COMMA);
				State = 44; expr(0);
				}
				}
				State = 49;
				ErrorHandler.Sync(this);
				_la = TokenStream.La(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class PairContext : ParserRuleContext {
		public ITerminalNode ID() { return GetToken(VKScriptParser.ID, 0); }
		public ITerminalNode COLON() { return GetToken(VKScriptParser.COLON, 0); }
		public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		public PairContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_pair; } }
		public override void EnterRule(IParseTreeListener listener) {
			IVKScriptListener typedListener = listener as IVKScriptListener;
			if (typedListener != null) typedListener.EnterPair(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IVKScriptListener typedListener = listener as IVKScriptListener;
			if (typedListener != null) typedListener.ExitPair(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IVKScriptVisitor<TResult> typedVisitor = visitor as IVKScriptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPair(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public PairContext pair() {
		PairContext _localctx = new PairContext(Context, State);
		EnterRule(_localctx, 8, RULE_pair);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 50; Match(ID);
			State = 51; Match(COLON);
			State = 52; expr(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ExprContext : ParserRuleContext {
		public ExprContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_expr; } }
	 
		public ExprContext() { }
		public virtual void CopyFrom(ExprContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class ExprPairContext : ExprContext {
		public PairContext pair() {
			return GetRuleContext<PairContext>(0);
		}
		public ExprPairContext(ExprContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IVKScriptListener typedListener = listener as IVKScriptListener;
			if (typedListener != null) typedListener.EnterExprPair(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IVKScriptListener typedListener = listener as IVKScriptListener;
			if (typedListener != null) typedListener.ExitExprPair(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IVKScriptVisitor<TResult> typedVisitor = visitor as IVKScriptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitExprPair(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class ExprBracketsContext : ExprContext {
		public ITerminalNode LBRACKET() { return GetToken(VKScriptParser.LBRACKET, 0); }
		public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		public ITerminalNode RBRACKET() { return GetToken(VKScriptParser.RBRACKET, 0); }
		public ExprBracketsContext(ExprContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IVKScriptListener typedListener = listener as IVKScriptListener;
			if (typedListener != null) typedListener.EnterExprBrackets(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IVKScriptListener typedListener = listener as IVKScriptListener;
			if (typedListener != null) typedListener.ExitExprBrackets(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IVKScriptVisitor<TResult> typedVisitor = visitor as IVKScriptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitExprBrackets(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class ExprOperatorGreaterThenContext : ExprContext {
		public ExprContext[] expr() {
			return GetRuleContexts<ExprContext>();
		}
		public ExprContext expr(int i) {
			return GetRuleContext<ExprContext>(i);
		}
		public ITerminalNode GREATER_THAN() { return GetToken(VKScriptParser.GREATER_THAN, 0); }
		public ExprOperatorGreaterThenContext(ExprContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IVKScriptListener typedListener = listener as IVKScriptListener;
			if (typedListener != null) typedListener.EnterExprOperatorGreaterThen(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IVKScriptListener typedListener = listener as IVKScriptListener;
			if (typedListener != null) typedListener.ExitExprOperatorGreaterThen(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IVKScriptVisitor<TResult> typedVisitor = visitor as IVKScriptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitExprOperatorGreaterThen(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class ExprOperatorPlusContext : ExprContext {
		public ExprContext[] expr() {
			return GetRuleContexts<ExprContext>();
		}
		public ExprContext expr(int i) {
			return GetRuleContext<ExprContext>(i);
		}
		public ITerminalNode PLUS() { return GetToken(VKScriptParser.PLUS, 0); }
		public ExprOperatorPlusContext(ExprContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IVKScriptListener typedListener = listener as IVKScriptListener;
			if (typedListener != null) typedListener.EnterExprOperatorPlus(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IVKScriptListener typedListener = listener as IVKScriptListener;
			if (typedListener != null) typedListener.ExitExprOperatorPlus(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IVKScriptVisitor<TResult> typedVisitor = visitor as IVKScriptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitExprOperatorPlus(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class ExprOperatorDivContext : ExprContext {
		public ExprContext[] expr() {
			return GetRuleContexts<ExprContext>();
		}
		public ExprContext expr(int i) {
			return GetRuleContext<ExprContext>(i);
		}
		public ITerminalNode DIV() { return GetToken(VKScriptParser.DIV, 0); }
		public ExprOperatorDivContext(ExprContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IVKScriptListener typedListener = listener as IVKScriptListener;
			if (typedListener != null) typedListener.EnterExprOperatorDiv(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IVKScriptListener typedListener = listener as IVKScriptListener;
			if (typedListener != null) typedListener.ExitExprOperatorDiv(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IVKScriptVisitor<TResult> typedVisitor = visitor as IVKScriptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitExprOperatorDiv(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class ExprOperatorMinusContext : ExprContext {
		public ExprContext[] expr() {
			return GetRuleContexts<ExprContext>();
		}
		public ExprContext expr(int i) {
			return GetRuleContext<ExprContext>(i);
		}
		public ITerminalNode MINUS() { return GetToken(VKScriptParser.MINUS, 0); }
		public ExprOperatorMinusContext(ExprContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IVKScriptListener typedListener = listener as IVKScriptListener;
			if (typedListener != null) typedListener.EnterExprOperatorMinus(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IVKScriptListener typedListener = listener as IVKScriptListener;
			if (typedListener != null) typedListener.ExitExprOperatorMinus(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IVKScriptVisitor<TResult> typedVisitor = visitor as IVKScriptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitExprOperatorMinus(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class ExprOperatorNotEqContext : ExprContext {
		public ExprContext[] expr() {
			return GetRuleContexts<ExprContext>();
		}
		public ExprContext expr(int i) {
			return GetRuleContext<ExprContext>(i);
		}
		public ITerminalNode NOTEQ() { return GetToken(VKScriptParser.NOTEQ, 0); }
		public ExprOperatorNotEqContext(ExprContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IVKScriptListener typedListener = listener as IVKScriptListener;
			if (typedListener != null) typedListener.EnterExprOperatorNotEq(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IVKScriptListener typedListener = listener as IVKScriptListener;
			if (typedListener != null) typedListener.ExitExprOperatorNotEq(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IVKScriptVisitor<TResult> typedVisitor = visitor as IVKScriptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitExprOperatorNotEq(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class ExprLiteralContext : ExprContext {
		public LiteralContext literal() {
			return GetRuleContext<LiteralContext>(0);
		}
		public ExprLiteralContext(ExprContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IVKScriptListener typedListener = listener as IVKScriptListener;
			if (typedListener != null) typedListener.EnterExprLiteral(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IVKScriptListener typedListener = listener as IVKScriptListener;
			if (typedListener != null) typedListener.ExitExprLiteral(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IVKScriptVisitor<TResult> typedVisitor = visitor as IVKScriptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitExprLiteral(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class ExprOperatorOrContext : ExprContext {
		public ExprContext[] expr() {
			return GetRuleContexts<ExprContext>();
		}
		public ExprContext expr(int i) {
			return GetRuleContext<ExprContext>(i);
		}
		public ITerminalNode OR() { return GetToken(VKScriptParser.OR, 0); }
		public ExprOperatorOrContext(ExprContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IVKScriptListener typedListener = listener as IVKScriptListener;
			if (typedListener != null) typedListener.EnterExprOperatorOr(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IVKScriptListener typedListener = listener as IVKScriptListener;
			if (typedListener != null) typedListener.ExitExprOperatorOr(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IVKScriptVisitor<TResult> typedVisitor = visitor as IVKScriptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitExprOperatorOr(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class ExprFuncCallContext : ExprContext {
		public ITerminalNode ID() { return GetToken(VKScriptParser.ID, 0); }
		public ITerminalNode LBRACKET() { return GetToken(VKScriptParser.LBRACKET, 0); }
		public ITerminalNode RBRACKET() { return GetToken(VKScriptParser.RBRACKET, 0); }
		public List_contentContext list_content() {
			return GetRuleContext<List_contentContext>(0);
		}
		public ExprFuncCallContext(ExprContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IVKScriptListener typedListener = listener as IVKScriptListener;
			if (typedListener != null) typedListener.EnterExprFuncCall(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IVKScriptListener typedListener = listener as IVKScriptListener;
			if (typedListener != null) typedListener.ExitExprFuncCall(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IVKScriptVisitor<TResult> typedVisitor = visitor as IVKScriptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitExprFuncCall(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class ExprOperatorAndContext : ExprContext {
		public ExprContext[] expr() {
			return GetRuleContexts<ExprContext>();
		}
		public ExprContext expr(int i) {
			return GetRuleContext<ExprContext>(i);
		}
		public ITerminalNode AND() { return GetToken(VKScriptParser.AND, 0); }
		public ExprOperatorAndContext(ExprContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IVKScriptListener typedListener = listener as IVKScriptListener;
			if (typedListener != null) typedListener.EnterExprOperatorAnd(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IVKScriptListener typedListener = listener as IVKScriptListener;
			if (typedListener != null) typedListener.ExitExprOperatorAnd(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IVKScriptVisitor<TResult> typedVisitor = visitor as IVKScriptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitExprOperatorAnd(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class ExprOperatorEqContext : ExprContext {
		public ExprContext[] expr() {
			return GetRuleContexts<ExprContext>();
		}
		public ExprContext expr(int i) {
			return GetRuleContext<ExprContext>(i);
		}
		public ITerminalNode EQ() { return GetToken(VKScriptParser.EQ, 0); }
		public ExprOperatorEqContext(ExprContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IVKScriptListener typedListener = listener as IVKScriptListener;
			if (typedListener != null) typedListener.EnterExprOperatorEq(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IVKScriptListener typedListener = listener as IVKScriptListener;
			if (typedListener != null) typedListener.ExitExprOperatorEq(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IVKScriptVisitor<TResult> typedVisitor = visitor as IVKScriptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitExprOperatorEq(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class ExprIdContext : ExprContext {
		public ITerminalNode ID() { return GetToken(VKScriptParser.ID, 0); }
		public ExprIdContext(ExprContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IVKScriptListener typedListener = listener as IVKScriptListener;
			if (typedListener != null) typedListener.EnterExprId(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IVKScriptListener typedListener = listener as IVKScriptListener;
			if (typedListener != null) typedListener.ExitExprId(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IVKScriptVisitor<TResult> typedVisitor = visitor as IVKScriptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitExprId(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class ExprOperatorModContext : ExprContext {
		public ExprContext[] expr() {
			return GetRuleContexts<ExprContext>();
		}
		public ExprContext expr(int i) {
			return GetRuleContext<ExprContext>(i);
		}
		public ITerminalNode MOD() { return GetToken(VKScriptParser.MOD, 0); }
		public ExprOperatorModContext(ExprContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IVKScriptListener typedListener = listener as IVKScriptListener;
			if (typedListener != null) typedListener.EnterExprOperatorMod(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IVKScriptListener typedListener = listener as IVKScriptListener;
			if (typedListener != null) typedListener.ExitExprOperatorMod(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IVKScriptVisitor<TResult> typedVisitor = visitor as IVKScriptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitExprOperatorMod(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class ExprMethodCallContext : ExprContext {
		public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		public ITerminalNode DOT() { return GetToken(VKScriptParser.DOT, 0); }
		public ITerminalNode ID() { return GetToken(VKScriptParser.ID, 0); }
		public ITerminalNode LBRACKET() { return GetToken(VKScriptParser.LBRACKET, 0); }
		public ITerminalNode RBRACKET() { return GetToken(VKScriptParser.RBRACKET, 0); }
		public List_contentContext list_content() {
			return GetRuleContext<List_contentContext>(0);
		}
		public ExprMethodCallContext(ExprContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IVKScriptListener typedListener = listener as IVKScriptListener;
			if (typedListener != null) typedListener.EnterExprMethodCall(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IVKScriptListener typedListener = listener as IVKScriptListener;
			if (typedListener != null) typedListener.ExitExprMethodCall(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IVKScriptVisitor<TResult> typedVisitor = visitor as IVKScriptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitExprMethodCall(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class ExprOperatorLessThenContext : ExprContext {
		public ExprContext[] expr() {
			return GetRuleContexts<ExprContext>();
		}
		public ExprContext expr(int i) {
			return GetRuleContext<ExprContext>(i);
		}
		public ITerminalNode LESS_THAN() { return GetToken(VKScriptParser.LESS_THAN, 0); }
		public ExprOperatorLessThenContext(ExprContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IVKScriptListener typedListener = listener as IVKScriptListener;
